tekton-pipeline-example-pipeline/tekton-pipeline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-el-ingress
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
spec:
  rules:
    - host: tekton-el.int.dev.mykronos.com
      http:
        paths:
          - path: /hooks
            pathType: Exact
            backend:
              service:
                name: el-tekton-argocd-example-build-el
                port:
                  number: 8080
